// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provision/DatabaseAccount/Create account permission action 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
    >
      <h1
        class="ant-typography css-1eepp70 css-dev-only-do-not-override-txh9fw"
      >
        数据权限
      </h1>
      <div
        class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class="ant-form-item-required"
              for="business"
              title="业务"
            >
              业务
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  aria-required="true"
                  class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="business_list_0"
                        aria-autocomplete="list"
                        aria-controls="business_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="business_list"
                        aria-required="true"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="business"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="business-1"
                    >
                      business-1
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class="ant-form-item-required"
              for="service"
              title="数据源"
            >
              数据源
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center css-af3nlx"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="service_list_1"
                            aria-autocomplete="list"
                            aria-controls="service_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="service_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="service"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="Julian Lueilwitz (aromatic-hammock.org)"
                        >
                          Julian Lueilwitz (aromatic-hammock.org)
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only basic-button-wrapper css-iieact"
                          style="margin-left: 12px;"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <span
                              class="css-u3jcp4"
                            >
                              <svg
                                fill="none"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M14.6666 6.93337V2.20004C14.6666 1.80004 14.3333 1.46671 13.9333 1.46671H8.99992C8.59992 1.46671 8.26658 1.80004 8.26658 2.20004V6.93337C8.26658 7.33337 8.59992 7.66671 8.99992 7.66671H13.9333C14.3333 7.66671 14.6666 7.33337 14.6666 6.93337ZM2.06659 8.40004C1.66659 8.40004 1.33325 8.73337 1.33325 9.13337V13.8667C1.33325 14.2667 1.66659 14.6 2.06659 14.6H6.99992C7.39992 14.6 7.73325 14.2667 7.73325 13.8667V9.13337C7.73325 8.73337 7.39992 8.40004 6.99992 8.40004H2.06659ZM4.79992 5.20004H4.06659C4.06659 3.93337 5.13325 2.86671 6.39992 2.86671H6.66658C6.86658 2.86671 6.99992 2.73337 6.99992 2.53337V1.66671C6.99992 1.46671 6.86658 1.33337 6.66658 1.33337H6.39992C4.26659 1.33337 2.53325 3.06671 2.53325 5.20004H1.66659C1.53325 5.20004 1.46659 5.33337 1.46659 5.46671C1.46659 5.53337 1.46659 5.53337 1.53325 5.60004L2.99992 7.26671C3.13325 7.40004 3.33325 7.40004 3.46659 7.26671L4.93325 5.60004C4.99992 5.53337 4.99992 5.40004 4.93325 5.33337C4.86659 5.26671 4.86659 5.20004 4.79992 5.20004ZM11.1999 10.8H11.9333C11.9333 12.0667 10.8666 13.1334 9.59992 13.1334H9.33325C9.13325 13.1334 8.99992 13.2667 8.99992 13.4667V14.4C8.99992 14.6 9.13325 14.7334 9.33325 14.7334H9.59992C11.7333 14.7334 13.4666 13 13.4666 10.8667H14.3333C14.4666 10.8667 14.5333 10.8 14.5333 10.6667C14.5333 10.6 14.5333 10.6 14.4666 10.5334L12.9999 8.86671C12.8666 8.73337 12.6666 8.73337 12.5333 8.86671L11.0666 10.5334C10.9999 10.6 10.9999 10.7334 11.0666 10.8C11.0666 10.7334 11.1333 10.8 11.1999 10.8Z"
                                  fill="#4583FF"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-1ov62z1"
                >
                  <section
                    class="css-tozcp0"
                  >
                    <span
                      class="permission-field-title"
                    >
                      数据权限概览
                    </span>
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-dangerous clear-permission-button basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            清除所有权限
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary add-permission-button basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            添加数据权限
                          </span>
                        </button>
                      </div>
                    </div>
                  </section>
                  <div
                    class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
                  >
                    <div
                      class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
                    >
                      <div
                        class="ant-spin-container"
                      >
                        <div
                          class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                        >
                          <div
                            class="ant-table-container"
                          >
                            <div
                              class="ant-table-content"
                              style="overflow-x: auto; overflow-y: hidden;"
                            >
                              <table
                                style="min-width: 100%; table-layout: auto;"
                              >
                                <colgroup>
                                  <col />
                                  <col />
                                  <col
                                    style="width: 164px;"
                                  />
                                </colgroup>
                                <thead
                                  class="ant-table-thead"
                                >
                                  <tr>
                                    <th
                                      class="ant-table-cell"
                                      scope="col"
                                    >
                                      数据对象
                                    </th>
                                    <th
                                      class="ant-table-cell"
                                      scope="col"
                                    >
                                      数据操作
                                    </th>
                                    <th
                                      class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                      scope="col"
                                      style="position: sticky; right: 0px;"
                                    >
                                      操作
                                    </th>
                                  </tr>
                                </thead>
                                <tbody
                                  class="ant-table-tbody"
                                >
                                  <tr
                                    aria-hidden="true"
                                    class="ant-table-measure-row"
                                    style="height: 0px; font-size: 0px;"
                                  >
                                    <td
                                      style="padding: 0px; border: 0px; height: 0px;"
                                    >
                                      <div
                                        style="height: 0px; overflow: hidden;"
                                      >
                                         
                                      </div>
                                    </td>
                                    <td
                                      style="padding: 0px; border: 0px; height: 0px;"
                                    >
                                      <div
                                        style="height: 0px; overflow: hidden;"
                                      >
                                         
                                      </div>
                                    </td>
                                    <td
                                      style="padding: 0px; border: 0px; height: 0px;"
                                    >
                                      <div
                                        style="height: 0px; overflow: hidden;"
                                      >
                                         
                                      </div>
                                    </td>
                                  </tr>
                                  <tr
                                    class="ant-table-row ant-table-row-level-0"
                                    data-row-key="127"
                                  >
                                    <td
                                      class="ant-table-cell"
                                    >
                                      <div
                                        class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                                      >
                                        <div
                                          class="ant-space-item"
                                        >
                                          <span
                                            class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                          >
                                            database-1.table-1
                                          </span>
                                        </div>
                                      </div>
                                    </td>
                                    <td
                                      class="ant-table-cell"
                                    >
                                      <div
                                        class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                                      >
                                        <div
                                          class="ant-space-item"
                                        >
                                          <span
                                            class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                          >
                                            查询
                                          </span>
                                        </div>
                                      </div>
                                    </td>
                                    <td
                                      class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                      style="position: sticky; right: 0px;"
                                    >
                                      <div
                                        class="css-new95e"
                                      >
                                        <div
                                          class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                                        >
                                          <div
                                            class="ant-space-item"
                                            style="margin-right: 8px;"
                                          >
                                            <button
                                              class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                              type="button"
                                            >
                                              <span>
                                                编 辑
                                              </span>
                                            </button>
                                          </div>
                                          <div
                                            class="ant-space-item"
                                          >
                                            <button
                                              class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                              type="button"
                                            >
                                              <span>
                                                删 除
                                              </span>
                                            </button>
                                          </div>
                                        </div>
                                      </div>
                                    </td>
                                  </tr>
                                </tbody>
                              </table>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-hidden css-dev-only-do-not-override-v9sov3 ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; min-width: 0; width: 0px; pointer-events: none;"
    >
      <div>
        <div
          id="business_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-label="business-1"
            aria-selected="true"
            id="business_list_0"
            role="option"
          >
            business-1
          </div>
          <div
            aria-label="business-2"
            aria-selected="false"
            id="business_list_1"
            role="option"
          >
            business-2
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 256px; overflow-y: hidden;"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  aria-selected="true"
                  class="ant-select-item ant-select-item-option ant-select-item-option-active ant-select-item-option-selected"
                  title="business-1"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    business-1
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="business-2"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    business-2
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="business-3"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    business-3
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="rc-virtual-list-scrollbar"
            style="width: 8px; top: 0px; bottom: 0px; right: 0px; position: absolute; display: none;"
          >
            <div
              class="rc-virtual-list-scrollbar-thumb"
              style="width: 100%; height: 128px; top: 0px; left: 0px; position: absolute; background: rgba(0, 0, 0, 0.5); border-radius: 99px; cursor: pointer; user-select: none;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-hidden css-dev-only-do-not-override-v9sov3 ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; min-width: 0; width: 0px; pointer-events: none;"
    >
      <div>
        <div
          id="service_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-selected="false"
            id="service_list_0"
            role="presentation"
          />
          <div
            aria-label="Julian Lueilwitz (aromatic-hammock.org)"
            aria-selected="true"
            id="service_list_1"
            role="option"
          >
            42343
          </div>
          <div
            aria-label="Gloria Kessler (zigzag-loneliness.com)"
            aria-selected="false"
            id="service_list_2"
            role="option"
          >
            30152
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 256px; overflow-y: hidden;"
          >
            <div
              style="height: 504px; position: relative; overflow: hidden;"
            >
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column; transform: translateY(0px); position: absolute; left: 0px; right: 0px; top: 0px;"
              >
                <div
                  class="ant-select-item ant-select-item-group"
                >
                  <div
                    class="css-1uw16ge"
                  >
                    <img
                      alt=""
                    />
                    <span
                      title="MySQL"
                    >
                      MySQL
                    </span>
                  </div>
                </div>
                <div
                  aria-selected="true"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped ant-select-item-option-active ant-select-item-option-selected"
                  title="Julian Lueilwitz (aromatic-hammock.org)"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Julian Lueilwitz (aromatic-hammock.org)
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                  title="Gloria Kessler (zigzag-loneliness.com)"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Gloria Kessler (zigzag-loneliness.com)
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                  title="Tyler Mitchell (guilty-marmalade.org)"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Tyler Mitchell (guilty-marmalade.org)
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                  title="Brent West (oddball-doughnut.com)"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Brent West (oddball-doughnut.com)
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                  title="Tabitha Herzog (disloyal-sunlamp.org)"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Tabitha Herzog (disloyal-sunlamp.org)
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                  title="Nicole Barrows (delightful-sense.net)"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Nicole Barrows (delightful-sense.net)
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                  title="Nicolas Sawayn (active-hosiery.name)"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Nicolas Sawayn (active-hosiery.name)
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                  title="Miguel Spinka II (droopy-footrest.com)"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Miguel Spinka II (droopy-footrest.com)
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                  title="Roger Gutkowski (well-made-modification.name)"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Roger Gutkowski (well-made-modification.name)
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                  title="Brett Rippin (plush-wind.name)"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Brett Rippin (plush-wind.name)
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-grouped"
                  title="Gilberto Feil (quixotic-scheduling.info)"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Gilberto Feil (quixotic-scheduling.info)
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="rc-virtual-list-scrollbar rc-virtual-list-scrollbar-show"
            style="width: 8px; top: 0px; bottom: 0px; right: 0px; position: absolute; display: none;"
          >
            <div
              class="rc-virtual-list-scrollbar-thumb"
              style="width: 100%; height: 121px; top: 0px; left: 0px; position: absolute; background: rgba(0, 0, 0, 0.5); border-radius: 99px; cursor: pointer; user-select: none;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  编辑数据权限
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item database-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class=""
                        title=""
                      >
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            选择数据库表
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <span
                              aria-label="info-circle"
                              class="anticon anticon-info-circle tooltips-default-icon"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="info-circle"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                />
                                <path
                                  d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
                          >
                            <div
                              class="ant-col css-dev-only-do-not-override-txh9fw"
                              style="flex: 0 0 180px; min-width: 0; margin-right: 12px;"
                            >
                              <div
                                class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-allow-clear ant-select-show-arrow"
                                data-testid="database-form-item-database-0"
                              >
                                <div
                                  class="ant-select-selector"
                                >
                                  <span
                                    class="ant-select-selection-search"
                                  >
                                    <input
                                      aria-activedescendant="data_objects_0_database_list_0"
                                      aria-autocomplete="list"
                                      aria-controls="data_objects_0_database_list"
                                      aria-expanded="false"
                                      aria-haspopup="listbox"
                                      aria-owns="data_objects_0_database_list"
                                      autocomplete="off"
                                      class="ant-select-selection-search-input"
                                      id="data_objects_0_database"
                                      readonly=""
                                      role="combobox"
                                      style="opacity: 0;"
                                      type="search"
                                      unselectable="on"
                                      value=""
                                    />
                                  </span>
                                  <span
                                    class="ant-select-selection-item"
                                    title="database-1"
                                  >
                                    database-1
                                  </span>
                                </div>
                                <span
                                  aria-hidden="true"
                                  class="ant-select-arrow"
                                  style="user-select: none;"
                                  unselectable="on"
                                >
                                  <span
                                    aria-label="down"
                                    class="anticon anticon-down ant-select-suffix"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                                <span
                                  aria-hidden="true"
                                  class="ant-select-clear"
                                  style="user-select: none;"
                                  unselectable="on"
                                >
                                  <svg
                                    fill="currentColor"
                                    height="14"
                                    viewBox="0 0 14 14"
                                    width="14"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                                    />
                                  </svg>
                                </span>
                              </div>
                            </div>
                            <div
                              class="ant-col css-dev-only-do-not-override-txh9fw"
                              style="flex: 1 1 auto; min-width: 0;"
                            >
                              <div
                                class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-multiple ant-select-show-arrow ant-select-show-search"
                                data-testid="database-form-item-schema-0"
                              >
                                <div
                                  class="ant-select-selector"
                                >
                                  <div
                                    class="ant-select-selection-overflow"
                                  >
                                    <div
                                      class="ant-select-selection-overflow-item"
                                      style="opacity: 1;"
                                    >
                                      <span
                                        class="ant-select-selection-item"
                                        title="table-1"
                                      >
                                        <span
                                          class="ant-select-selection-item-content"
                                        >
                                          table-1
                                        </span>
                                        <span
                                          aria-hidden="true"
                                          class="ant-select-selection-item-remove"
                                          style="user-select: none;"
                                          unselectable="on"
                                        >
                                          <span
                                            aria-label="close"
                                            class="anticon anticon-close"
                                            role="img"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="close"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="64 64 896 896"
                                              width="1em"
                                            >
                                              <path
                                                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                                              />
                                            </svg>
                                          </span>
                                        </span>
                                      </span>
                                    </div>
                                    <div
                                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                                      style="opacity: 1;"
                                    >
                                      <div
                                        class="ant-select-selection-search"
                                        style="width: 0px;"
                                      >
                                        <input
                                          aria-activedescendant="data_objects_0_tables_list_0"
                                          aria-autocomplete="list"
                                          aria-controls="data_objects_0_tables_list"
                                          aria-expanded="false"
                                          aria-haspopup="listbox"
                                          aria-owns="data_objects_0_tables_list"
                                          autocomplete="off"
                                          class="ant-select-selection-search-input"
                                          id="data_objects_0_tables"
                                          readonly=""
                                          role="combobox"
                                          style="opacity: 0;"
                                          type="search"
                                          unselectable="on"
                                          value=""
                                        />
                                        <span
                                          aria-hidden="true"
                                          class="ant-select-selection-search-mirror"
                                        >
                                           
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                                <span
                                  aria-hidden="true"
                                  class="ant-select-arrow"
                                  style="user-select: none;"
                                  unselectable="on"
                                >
                                  <span
                                    aria-label="down"
                                    class="anticon anticon-down ant-select-suffix"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                            <div
                              class="ant-col css-dev-only-do-not-override-txh9fw"
                              style="flex: 0 0 48px; min-width: 0;"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <button
                            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default form-list-add add-object-button basic-button-wrapper css-1719g3l"
                            type="button"
                          >
                            <span
                              class="ant-btn-icon"
                            >
                              <svg
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M7 13.667A6.667 6.667 0 1 1 7 .334a6.667 6.667 0 0 1 0 13.333m-.667-7.334H3.668v1.334h2.667v2.666h1.333V7.667h2.667V6.333H7.667V3.667H6.334z"
                                  fill="#4583FF"
                                />
                              </svg>
                            </span>
                            <span>
                              添加数据库表
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="data_operations"
                        title="选择权限"
                      >
                        选择权限
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-multiple ant-select-show-arrow ant-select-show-search"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <div
                                class="ant-select-selection-overflow"
                              >
                                <div
                                  class="ant-select-selection-overflow-item"
                                  style="opacity: 1;"
                                >
                                  <span
                                    class="ant-select-selection-item"
                                    title="查询"
                                  >
                                    <span
                                      class="ant-select-selection-item-content"
                                    >
                                      查询
                                    </span>
                                    <span
                                      aria-hidden="true"
                                      class="ant-select-selection-item-remove"
                                      style="user-select: none;"
                                      unselectable="on"
                                    >
                                      <span
                                        aria-label="close"
                                        class="anticon anticon-close"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="close"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                                  style="opacity: 1;"
                                >
                                  <div
                                    class="ant-select-selection-search"
                                    style="width: 0px;"
                                  >
                                    <input
                                      aria-activedescendant="data_operations_list_0"
                                      aria-autocomplete="list"
                                      aria-controls="data_operations_list"
                                      aria-expanded="false"
                                      aria-haspopup="listbox"
                                      aria-owns="data_operations_list"
                                      aria-required="true"
                                      autocomplete="off"
                                      class="ant-select-selection-search-input"
                                      id="data_operations"
                                      readonly=""
                                      role="combobox"
                                      style="opacity: 0;"
                                      type="search"
                                      unselectable="on"
                                      value=""
                                    />
                                    <span
                                      aria-hidden="true"
                                      class="ant-select-selection-search-mirror"
                                    >
                                       
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`provision/DatabaseAccount/Create render init snap 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw"
    >
      <h1
        class="ant-typography css-1eepp70 css-dev-only-do-not-override-txh9fw"
      >
        数据权限
      </h1>
      <div
        class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class="ant-form-item-required"
              for="business"
              title="业务"
            >
              业务
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  aria-required="true"
                  class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="business_list_0"
                        aria-autocomplete="list"
                        aria-controls="business_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="business_list"
                        aria-required="true"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="business"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-placeholder"
                    >
                      请选择{{name}}
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
          >
            <label
              class="ant-form-item-required"
              for="service"
              title="数据源"
            >
              数据源
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center css-af3nlx"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="service_list_0"
                            aria-autocomplete="list"
                            aria-controls="service_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="service_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="service"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          请选择{{name}}
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only basic-button-wrapper css-iieact"
                          disabled=""
                          style="margin-left: 12px;"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <span
                              class="css-u3jcp4"
                            >
                              <svg
                                fill="none"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M14.6666 6.93337V2.20004C14.6666 1.80004 14.3333 1.46671 13.9333 1.46671H8.99992C8.59992 1.46671 8.26658 1.80004 8.26658 2.20004V6.93337C8.26658 7.33337 8.59992 7.66671 8.99992 7.66671H13.9333C14.3333 7.66671 14.6666 7.33337 14.6666 6.93337ZM2.06659 8.40004C1.66659 8.40004 1.33325 8.73337 1.33325 9.13337V13.8667C1.33325 14.2667 1.66659 14.6 2.06659 14.6H6.99992C7.39992 14.6 7.73325 14.2667 7.73325 13.8667V9.13337C7.73325 8.73337 7.39992 8.40004 6.99992 8.40004H2.06659ZM4.79992 5.20004H4.06659C4.06659 3.93337 5.13325 2.86671 6.39992 2.86671H6.66658C6.86658 2.86671 6.99992 2.73337 6.99992 2.53337V1.66671C6.99992 1.46671 6.86658 1.33337 6.66658 1.33337H6.39992C4.26659 1.33337 2.53325 3.06671 2.53325 5.20004H1.66659C1.53325 5.20004 1.46659 5.33337 1.46659 5.46671C1.46659 5.53337 1.46659 5.53337 1.53325 5.60004L2.99992 7.26671C3.13325 7.40004 3.33325 7.40004 3.46659 7.26671L4.93325 5.60004C4.99992 5.53337 4.99992 5.40004 4.93325 5.33337C4.86659 5.26671 4.86659 5.20004 4.79992 5.20004ZM11.1999 10.8H11.9333C11.9333 12.0667 10.8666 13.1334 9.59992 13.1334H9.33325C9.13325 13.1334 8.99992 13.2667 8.99992 13.4667V14.4C8.99992 14.6 9.13325 14.7334 9.33325 14.7334H9.59992C11.7333 14.7334 13.4666 13 13.4666 10.8667H14.3333C14.4666 10.8667 14.5333 10.8 14.5333 10.6667C14.5333 10.6 14.5333 10.6 14.4666 10.5334L12.9999 8.86671C12.8666 8.73337 12.6666 8.73337 12.5333 8.86671L11.0666 10.5334C10.9999 10.6 10.9999 10.7334 11.0666 10.8C11.0666 10.7334 11.1333 10.8 11.1999 10.8Z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <section
                  class="css-1ov62z1"
                >
                  <section
                    class="css-tozcp0"
                  >
                    <span
                      class="permission-field-title"
                    >
                      数据权限概览
                    </span>
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-dangerous clear-permission-button basic-button-wrapper css-geipcv"
                          disabled=""
                          type="button"
                        >
                          <span>
                            清除所有权限
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary add-permission-button basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            添加数据权限
                          </span>
                        </button>
                      </div>
                    </div>
                  </section>
                  <div
                    class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
                  >
                    <div
                      class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
                    >
                      <div
                        class="ant-spin-container"
                      >
                        <div
                          class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                        >
                          <div
                            class="ant-table-container"
                          >
                            <div
                              class="ant-table-content"
                              style="overflow-x: auto; overflow-y: hidden;"
                            >
                              <table
                                style="min-width: 100%; table-layout: auto;"
                              >
                                <colgroup>
                                  <col />
                                  <col />
                                  <col
                                    style="width: 164px;"
                                  />
                                </colgroup>
                                <thead
                                  class="ant-table-thead"
                                >
                                  <tr>
                                    <th
                                      class="ant-table-cell"
                                      scope="col"
                                    >
                                      数据对象
                                    </th>
                                    <th
                                      class="ant-table-cell"
                                      scope="col"
                                    >
                                      数据操作
                                    </th>
                                    <th
                                      class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                      scope="col"
                                      style="position: sticky; right: 0px;"
                                    >
                                      操作
                                    </th>
                                  </tr>
                                </thead>
                                <tbody
                                  class="ant-table-tbody"
                                >
                                  <tr
                                    aria-hidden="true"
                                    class="ant-table-measure-row"
                                    style="height: 0px; font-size: 0px;"
                                  >
                                    <td
                                      style="padding: 0px; border: 0px; height: 0px;"
                                    >
                                      <div
                                        style="height: 0px; overflow: hidden;"
                                      >
                                         
                                      </div>
                                    </td>
                                    <td
                                      style="padding: 0px; border: 0px; height: 0px;"
                                    >
                                      <div
                                        style="height: 0px; overflow: hidden;"
                                      >
                                         
                                      </div>
                                    </td>
                                    <td
                                      style="padding: 0px; border: 0px; height: 0px;"
                                    >
                                      <div
                                        style="height: 0px; overflow: hidden;"
                                      >
                                         
                                      </div>
                                    </td>
                                  </tr>
                                  <tr
                                    class="ant-table-placeholder"
                                  >
                                    <td
                                      class="ant-table-cell"
                                      colspan="3"
                                    >
                                      <div
                                        class="ant-table-expanded-row-fixed"
                                        style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                      />
                                    </td>
                                  </tr>
                                </tbody>
                              </table>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;
